add form group to the address_book.cshtml to add contact details

--- a/Views/address_book.cshtml
+++ b/Views/address_book.cshtml
@@ -5,28 +5,20 @@
     <h1>Your Address Book!</h1>
     <form action='/address_details'>
       <div class='form-group'>
-        <label for='person1'>A name</label>
-        <input id='person1' name='person1' class='form-control' type='text'>
+        <label for='firstname'>First name</label>
+        <input id='firstname' name='firstname' class='form-control' type='text'>
       </div>
       <div class='form-group'>
-        <label for='person2'>Another name</label>
-        <input id='person2' name='person2' class='form-control' type='text'>
+        <label for='lastname'>Another name</label>
+        <input id='lastname' name='lastname' class='form-control' type='text'>
       </div>
       <div class='form-group'>
-        <label for='animal'>An animal</label>
-        <input id='animal' name='animal' class='form-control' type='text'>
+        <label for='phoneNumber'>Phone Number</label>
+        <input id='phoneNumber' name='phoneNumber' class='form-control' type='text'>
       </div>
       <div class='form-group'>
-        <label for='exclamation'>An exclamation</label>
-        <input id='exclamation' name='exclamation' class='form-control' type='text'>
+        <label for='Address'>Address</label>
+        <input id='address' name='address' class='form-control' type='text'>
       </div>
-      <div class='form-group'>
-        <label for='verb'>A past tense verb</label>
-        <input id='verb' name='verb' class='form-control' type='text'>
-      </div>
-      <div class='form-group'>
-        <label for='noun'>A noun</label>
-        <input id='noun' name='noun' class='form-control' type='text'>
-      </div>
-      <button type='submit' class='btn'>Show me the story!</button>
+      <button type='submit' class='btn btn-primary'>Show my Contact!</button>
     </form>
