--- a/Views/add_contact.cshtml
+++ b/Views/add_contact.cshtml
@@ -1,3 +1,27 @@
-@{
-  Layout="Shared/_Layout.cshtml";
-}
+
+<h1>Your Address Book!</h1>
+<form action='/contact_form' method="post">
+  <div class='form-group'>
+    <label for='firstname'>First name</label>
+    <input id='firstname' name='firstname' class='form-control' type='text'>
+  </div>
+  <div class='form-group'>
+    <label for='lastname'>Last name</label>
+    <input id='lastname' name='lastname' class='form-control' type='text'>
+  </div>
+  <div class='form-group'>
+    <label for='phoneNumber'>Phone Number</label>
+    <input id='phoneNumber' name='phoneNumber' class='form-control' type='text'>
+  </div>
+  <div class='form-group'>
+    <label for='Address'>Address</label>
+    <input id='address' name='address' class='form-control' type='text'>
+  </div>
+  <button type='submit' class='btn btn-md btn-primary'>Add to my Contacts!</button>
+</form>
+
+<form action="/contact_added" method="post">
+  <label for="new-contact">Contact detail:</label>
+  <input id="new-contact" name="new-contact" type="text">
+  <button type="submit">Submit</button>
+</form>
