--- a/Views/view_contact.cshtml
+++ b/Views/view_contact.cshtml
@@ -1,3 +1,8 @@
-@{
-  Layout="Shared/_Layout.cshtml";
-}
+
+<h1>Your Address Book!</h1>
+  <ul>
+    <li>@Model.GetFirstName()</li>
+    <li>@Model.GetLastName()</li>
+    <li>@Model.GetPhoneNumber()</li>
+    <li>@Model.GetAddress()</li>
+  </ul>
