add lines of code to clear all contacts

--- a/Views/contact.cshtml
+++ b/Views/contact.cshtml
@@ -1,5 +1,6 @@
 
 <h1>Your Address Book!</h1>
+</div>
 <form action='/contact_form' method="post">
   <div class='form-group'>
     <label for='firstname'>First name</label>
@@ -18,10 +19,4 @@
     <input id='address' name='address' class='form-control' type='text'>
   </div>
   <button type='submit' class='btn btn-md btn-primary'>Add to my Contacts!</button>
-</form>
-
-<form action="/contact_added" method="post">
-  <label for="new-contact">Contact detail:</label>
-  <input id="new-contact" name="new-contact" type="text">
-  <button type="submit">Submit</button>
 </form>
