--- a/Views/address_book.cshtml
+++ b/Views/address_book.cshtml
@@ -10,8 +10,8 @@
   <div class="container">
     <div class="jumbotron">
       <h1>Your Address Book!</h1>
-    </div>
-    <p><a href="/add_contact.cshtml">Create new Contact!</a></p>
+
+    <p><a href="/contact.cshtml">Create new Contact!</a></p>
   </div>
 </body>
 </html>
