--- a/Views/contact_added.cshtml
+++ b/Views/contact_added.cshtml
@@ -1,6 +1,7 @@
+
 <h1>You've added a new contact!</h1>
-<p>@Model.GetFirstName()</p>
-<p>@Model.GetLastName()</p>
-<p>@Model.GetPhoneNumber()</p>
-<p>@Model.GetAddress()</p>
-<p><a href="/">Add another contact</a></p>
+<form action="/contact_added" method="post">
+  <label for="new-contact">Contact detail:</label>
+  <input id="new-contact" name="new-contact" type="text">
+  <button type="submit">Submit</button>
+</form>
