add code to assign ID to each contact and get the user submit the value in the form to create contact

--- a/Views/contact_added.cshtml
+++ b/Views/contact_added.cshtml
@@ -1,7 +1,9 @@
+@{
+  Layout="Shared/_Layout.cshtml";
+}
 
 <h1>You've added a new contact!</h1>
-<form action="/contact_added" method="post">
+<form method="post">
   <label for="new-contact">Contact detail:</label>
   <input id="new-contact" name="new-contact" type="text">
-  <button type="submit">Submit</button>
 </form>
