--- a/Views/contacts_cleared.cshtml
+++ b/Views/contacts_cleared.cshtml
@@ -1,4 +1,4 @@
 @* Confirmation page to show all contacts cleared *@
 
 <h1>Your list has been cleared!</h1>
-<p><a href="/">Add a new task</a></p>
+<p><a href="/">Add a new contact</a></p>
