--- a/Views/view_contact.cshtml
+++ b/Views/view_contact.cshtml
@@ -1,5 +1,8 @@
 
-<h1>Your Address Book!</h1>
+@{
+  Layout="Shared/_Layout.cshtml";
+}
+
 @foreach(Contact contact in Model)
 {
   <li>@contact</li>
