--- a/Views/address_book.cshtml
+++ b/Views/address_book.cshtml
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Address Book</title>
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-  <link rel="stylesheet" href="/Content/css/styles.css">
-</head>
-<body>
-  <div class="container">
-    <div class="jumbotron">
-      <h1>Your Address Book!</h1>
+@{
+  Layout="Shared/_Layout.cshtml";
+}
 
-    <p><a href="/contact.cshtml">Create new Contact!</a></p>
-  </div>
-</body>
-</html>
+
+<p><a href="/new_contact">Create new Contact!</a></p>
