--- a/Views/contact.cshtml
+++ b/Views/contact.cshtml
@@ -1,7 +1,9 @@
+@{
+  Layout="Shared/_Layout.cshtml";
+}
 
-<h1>Your Address Book!</h1>
-</div>
-<form action='/contact_form' method="post">
+
+<form action='/contact_added' method="post">
   <div class='form-group'>
     <label for='firstname'>First name</label>
     <input id='firstname' name='firstname' class='form-control' type='text'>
@@ -10,7 +12,7 @@
     <label for='lastname'>Last name</label>
     <input id='lastname' name='lastname' class='form-control' type='text'>
   </div>
-  <div class='form-group'>
+  <div class='form-group btn-md'>
     <label for='phoneNumber'>Phone Number</label>
     <input id='phoneNumber' name='phoneNumber' class='form-control' type='text'>
   </div>
