--- a/Views/contact_added.cshtml
+++ b/Views/contact_added.cshtml
@@ -3,7 +3,14 @@
 }
 
 <h1>You've added a new contact!</h1>
-<form method="post">
-  <label for="new-contact">Contact detail:</label>
-  <input id="new-contact" name="new-contact" type="text">
-</form>
+<ul>
+
+    <h1>@Model.GetFirstName()</h1>
+    <h1>@Model.GetLasttName()</h1>
+    <h3>@Model.GetPhonNumber()</h3>
+    <h3>@Model.GetAddress()</h3>
+
+    <p><a href="/">View all Contacts</a></p>
+
+  </ul>
+<p><a href="/">View Contacts</a></p>
