--- a/Views/contact_added.cshtml
+++ b/Views/contact_added.cshtml
@@ -3,14 +3,11 @@
 }
 
 <h1>You've added a new contact!</h1>
-<ul>
 
-    <h1>@Model.GetFirstName()</h1>
-    <h1>@Model.GetLasttName()</h1>
-    <h3>@Model.GetPhonNumber()</h3>
-    <h3>@Model.GetAddress()</h3>
+    <h2>First Name: @Model.GetFirstName()</h2>
+    <h2>Last Name: @Model.GetLastName()</h2>
+    <h3>Phone number: @Model.GetPhoneNumber()</h3>
+    <h3>Address: @Model.GetAddress()</h3>
 
-    <p><a href="/">View all Contacts</a></p>
-
-  </ul>
-<p><a href="/">View Contacts</a></p>
+  <br>
+   <p><a href="/">View all Contacts</a></p>
